deploy/k8s/2_auth_service/10_auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 80
      name: http
      targetPort: http
